--- a/imagefit.html
+++ b/imagefit.html
@@ -29,9 +29,9 @@
 				<div class="buffer col-12"></div>
 				<section class="text-center col-12">
 					<hr>
-					<button class="btn btn-primary btn-xl">
+					<a href="https://login.mailchimp.com/"><button class="btn btn-primary btn-xl">
 						Find out more
-					</button>
+					</button></a>
 				</section>
 			</div>
 		</div>
