--- a/imagefit.html
+++ b/imagefit.html
@@ -29,8 +29,8 @@
 				<div class="buffer col-12"></div>
 				<section class="text-center col-12">
 					<hr>
-					<a href="https://login.mailchimp.com/"> <button class="btn btn-primary btn-xl">
-						Find out more
+					<a href="https://login.mailchimp.com/"><button class="btn btn-primary btn-xl">
+						Find out more!
 					</button></a>
 				</section>
 			</div>
